Fixed the too wide Nav icons

--- a/styles.css
+++ b/styles.css
@@ -21,11 +21,18 @@ body{
 
 
 .main-grid-container {
-    display: grid;
+    display: flex;
     height: 91.5vh;
-    grid-template-columns: 7% 20% 1fr;
+    /* grid-template-columns: 30% 1fr; */
     margin-bottom: 0;
     background-color: #1f1f1f;
+}
+
+.side-items{
+    max-width: 20%;
+    display: flex;
+    column-gap: 0;
+    background-color: pink;
 }
 
 .left-file-bar{
@@ -33,6 +40,7 @@ body{
     color: #e2c08d;
     font-size: 13px;
     min-width: 120px;
+    flex: 1;
 }
 .left-file-bar ul{
     list-style-position: inside;
@@ -49,6 +57,7 @@ body{
     display:flex;
     flex-direction:column;
     gap: 2rem;
+    max-width: 50px;
 }
 .side-nav-bar div{
     text-align: center;
@@ -69,6 +78,7 @@ body{
     position: absolute;
     bottom: 20px;
 }
+
 
 img {
     width: 60%;
